//
// db3_rullup.proto
// Copyright (C) 2023 db3.network Author imotai <codego.me@gmail.com>
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//    http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
//

syntax = "proto3";

package db3_rollup_proto;

message RollupRecord {
  uint64 end_block = 1;
  uint64 raw_data_size = 2;
  uint64 compress_data_size = 3;
  uint64 processed_time = 4;
  string arweave_tx = 5;
  uint64 time = 6;
  uint64 mutation_count = 7;
  uint64 cost = 8;
}
